# r2p

./: .gitignore  README.md  qmake-clazy.sh  r2p_proj.pro
client/: client.cpp  client.h  client.pro  client.ui  connectWindow.cpp  connectWindow.h  connectWindow.ui  main.cpp  meson.build  r2p.cpp  r2p.h  resources.qrc
r2p/: connectWindow.cpp  connectWindow.h  connectWindow.ui  r2p.cpp  r2p.h  r2p.pro  r2p_global.h
server/: connectWindow.cpp  connectWindow.h  connectWindow.ui  fileBrowser.cpp  fileBrowser.h  fileBrowser.ui  icons.qrc  main.cpp  meson.build  r2p.cpp  r2p.h  resources.qrc  server.cpp  server.h  server.pro  server.ui
